<resources>
    <string name="app_name">NFLSer</string>
    <string name="version_no" translatable="false">0.1.3</string>

    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="developer_name">GuardHei</string>
    <string name="home">Home</string>
    <string name="resources">Resources</string>
    <string name="gc">Game Center</string>
    <string name="forum">Forum</string>
    <string name="ic">International Center</string>
    <string name="alumni">Alumni</string>
    <string name="wiki">Wiki</string>
    <string name="weather">Weather</string>
    <string name="media">Media</string>
    <string name="news">News</string>

    <string name="login_activity_title">Login</string>
    <string name="real_name_auth_activity_title">Real Name Auth.</string>
    <string name="phone_auth_activity_title">Phone Auth.</string>
    <string name="sign_up_activity_title">Sign-Up</string>
    <string name="reset_password_activity_title">Reset-Password</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_hint">Already got an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_hint">Haven\'t got an account ?</string>
    <string name="reset_password">Send the Email</string>
    <string name="reset_password_hint">Forget the password ？</string>
    <string name="request_failed">Request Failed</string>
    <string name="offline">Available Network Service is not detected</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="welcome">Welcome,</string>
    <string name="operation_succeed">Operation Succeed</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_hint">Please Notice the Format</string>
    <string name="valid">Vaild</string>
    <string name="invalid">Invalid</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="send_email_success">Send Email Successfully</string>
    <string name="exit">Exit</string>
    <string name="exit_tip">Press Again to Exit</string>
    <string name="cached">Cached</string>
    <string name="loading">Loading ...</string>
    <string name="downloading">Downloading ...</string>
    <string name="close_tip">Haven\'t Open Yet</string>
    <string name="warning">Warning</string>
    <string name="delete_tip">Do you want to delete the local file ?</string>
    <string name="download_tip">Do you want to download the file to local ?</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="unsupported_tip">Do not support file type</string>
    <string name="name_confirm_back_tip">Please finish Real-name Authentication first</string>
    <string name="chinese_name">Chinese Name</string>
    <string name="english_name">English Name</string>
    <string name="class_id">Class ID</string>
    <string name="back">Back</string>
    <string name="send_verification_code">Send Vrf. Code</string>
    <string name="send_for_verification_code_failed_tip">Please check whether the phone has been used.</string>
    <string name="succeed">Succeed !</string>
    <string name="failed">Failed !</string>
    <string name="phone_auth_go_tip">You haven\'t finish Phone Auth. yet. Please complete it to enable Resources Function.</string>
    <string name="real_name_auth_tip">You haven\'t finish Real Name Auth. yet. Please complete it to enable Resources Function.</string>
    <string name="func_bloc_list_header">Function Blocks</string>
    <string name="func_bloc_list_footer">Buy Us a Coffee !</string>
    <string name="go">Go</string>
    <string name="resources_closed_tip">Please complete Real Name Auth first !</string>
    <string name="verison_check">Version Check</string>
    <string name="version_old_tip">The app version is not the latest. Update it to enjoy the new functions and bugs-fixings.</string>
    <string name="version_too_old_tip">The app version is too old to be supported, please update.</string>
    <string name="version_is_debug_tip">The app version is for debugging only, install release version in the future.</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="say_thanks_to">Say Thanks To</string>
    <string name="offline_tip">Please open WIFI or 4G to use this function.</string>
    <string name="tickets">Tickets</string>
    <string name="analyzing">Analyzing ...</string>
    <string name="ticket_request_failed_tip">Maybe you haven\'t buy the digital ticket</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrator">Vibrator</string>
    <string name="vibrating">Vibrating ...</string>
    <string name="vibrate_mode_hint">Choose the vibration mode</string>
    <string name="vibrate_time_hint">Choose the vibration time</string>
    <string name="vibrate_amplitude_hint">Choose the vibration amplitude</string>
</resources>