<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ToolbarTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/list_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingBottom="5dp"
                android:background="@null"
                android:src="@mipmap/nflsio"
                android:clickable="true"/>

            <TextView
                android:id="@+id/home_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:layout_gravity="center"
                android:background="@null"
                android:text="@string/reset_password_activity_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:src="@drawable/selector_help_icon"
                android:tint="@drawable/selector_tool_icon_tint"
                android:clickable="true"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/email_address"
            android:textColorHint="@color/colorAccentLight"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:ellipsize="end"
            android:maxLines="1"
            android:windowSoftInputMode="adjustUnspecified"/>

        <TextView
            android:id="@+id/input_email_tip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/email_address_hint"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccentLight"
            android:textStyle="italic"
            android:textSize="15sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_button_tint"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@drawable/selector_text_button_tint"
        android:textStyle="normal"
        android:textSize="20sp"
        android:clickable="true"/>

    <TextView
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@null"
        android:text="@string/login_hint"
        android:textAlignment="center"
        android:textColor="@drawable/selector_text_button_tint"
        android:textStyle="normal"
        android:textSize="15sp"
        android:clickable="true"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:indeterminate="true"/>

</LinearLayout>